# GR00T-N1.7-Fork

./: .dockerignore  .gitattributes  ATTRIBUTIONS.md  CLAUDE.md  CONTRIBUTING.md  FAQ.md  README.md  finetune.sh  pyproject.toml
data_config/: counterstrike_config.py  movingpoint_config.py
demo_data/libero_demo/meta/: stats.json
docker/: .dockerignore  Dockerfile  README.md
examples/DROID/: README.md  main_gr00t.py
examples/GR00TWholeBodyControl/: README.md
examples/LIBERO/: README.md
examples/RoboLab/: README.md
examples/SO100/: README.md
examples/SimplerEnv/: README.md
examples/mask-guided-background-suppression/: README.md
examples/robocasa/: README.md
examples/robocasa-gr1-tabletop-tasks/: README.md
getting_started/: GR00T_inference.ipynb  data_config.md  data_preparation.md  finetune_new_embodiment.md  hardware_recommendation.md  policy.md  real_world_deployment.md
gr00t/data/: stats.py  utils.py
gr00t/data/dataset/: factory.py
gr00t/data/state_action/: droid_frame.py
gr00t/deployment/: modes.py
gr00t/eval/: _horizon_contract.py  open_loop_eval.py  rollout_policy.py  run_gr00t_server.py
gr00t/eval/real_robot/SO100/: eval_so100.py
gr00t/eval/sim/LIBERO/: setup_libero.sh
gr00t/eval/sim/SimplerEnv/: setup_SimplerEnv.sh  simpler_env.py
gr00t/eval/sim/robocasa/: setup_RoboCasa.sh
gr00t/eval/sim/robocasa-gr1-tabletop-tasks/: setup_RoboCasaGR1TabletopTasks.sh
gr00t/eval/sim/robocasa365/: gymnasium_groot.py
gr00t/eval/sim/wrapper/: video_recording_wrapper.py
gr00t/experiment/: experiment.py  utils.py
gr00t/model/base/: model_pipeline.py
gr00t/model/gr00t_n1d7/: image_augmentations.py  processing_gr00t_n1d7.py  setup.py
gr00t/model/modules/: qwen3_backbone.py
gr00t/policy/: server_client.py
gr00t/utils/: video_utils.py
scripts/: download_droid_sample.py  verify_droid_rotation_correction.py
scripts/deployment/: GR00T_inference_timing.ipynb  README.md  _trt_contract.py  benchmark_inference.py  build_tensorrt_engine.py  build_trt_pipeline.py  export_onnx_n1d7.py  standalone_inference_script.py  trt_model_forward.py  trt_torch.py  verify_n1d7_trt.py
scripts/deployment/dgpu/: bootstrap_wheels.sh
scripts/deployment/dgpu/wheels/: torchcodec-0.8.0-cp312-cp312-linux_aarch64.whl
scripts/deployment/thor/wheels/: torchcodec-0.10.0a0-cp312-cp312-linux_aarch64.whl
scripts/lerobot_conversion/: README.md
tests/: conftest.py
tests/examples/: test_droid.py
tests/gr00t/data/: test_stats_embodiment_guard.py
tests/gr00t/eval/: test_horizon_contract.py  test_robocasa365_rollout_policy.py  test_rollout_episode_length.py  test_rollout_max_episode_steps.py  test_server_modality_json.py  test_so100_action_steps.py
tests/gr00t/eval/sim/: test_robocasa365_gymnasium_groot.py  test_simpler_env_success.py
tests/gr00t/eval/sim/wrapper/: test_video_recorder_cleanup.py
tests/gr00t/experiment/: test_best_metric_callback_save.py  test_warn_configs.py
tests/gr00t/model/: test_action_horizon_validation.py  test_gated_backbone_error.py  test_qwen3_rope.py  test_variable_image_size.py
tests/gr00t/utils/: test_run_or_wait_on_rank0.py  test_video_backend.py  test_video_decoder_error.py
tests/scripts/deployment/: test_build_tensorrt_engine.py  test_dit_only_forward_signature.py  test_export_onnx_legacy_exporter.py  test_export_vit_rotary.py  test_pipeline_modes_consistency.py  test_standalone_inference.py  test_trt_contract.py  test_trt_pipeline_modes.py
